# parking-lot-api

./: README.md  pyproject.toml  schema.yml
parking/: settings.py  urls.py
parking/apps/api/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
parking/apps/api/fixtures/: parking_lots.json  spots.json  vehicles.json
parking/apps/api/migrations/: 0001_initial.py
parking/apps/api/tests/: test_parking_lots_endpoint.py  test_spots_endpoint.py  test_vehicles_endpoint.py  utils.py
